[package]
name = "envo"
version = "0.1.0"
edition = "2024"
description = "A Rust port of caarlos0/env - parse environment variables into structs. Link: https://github.com/caarlos0/env"
license = "MIT"

[dependencies]
duration-str = { version = "0.21", features = ["lowercase"] }
shellexpand = "3.1.2"
url = "2.5.8"
shell = "0.3.2"
